--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
       <label><input type="checkbox" name="hobbies" value="reading"> Reading</label>
       <label><input type="checkbox" name="hobbies" value="sports"> Sports</label>
       <label><input type="checkbox" name="hobbies" value="music"> Music</label>
-      <label><input type="checkbox" name="hobbies" value="music"> Dance</label>
+      <label><input type="checkbox" name="hobbies" value="music"> Shooting</label>
     </div>
     <!-- Profile Photo -->
     <label for="photo">Profile Photo:</label>
